--- a/404.html
+++ b/404.html
@@ -1,10 +1,28 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en" >
 <head>
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Spacy 404 with count up</title>
+  <link rel='stylesheet' href='https://cdn.3up.dk/flexgrid.io@2.5.1/css/flexgrid.min.css'><link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-404 Not Found!
+<!-- partial:index.partial.html -->
+<div class="container">
+    <div class="row">
+        <div class="xs-12 md-6 mx-auto">
+            <div id="countUp">
+                <div class="number" data-count="404">0</div>
+                <div class="text">Page not found</div>
+                <div class="text">This may not mean anything.</div>
+                <div class="text">I'm probably working on something that has blown up.</div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+<script src='https://cdn.3up.dk/in-view@0.6.1'></script><script  src="./script.js"></script>
+
 </body>
 </html>
