--- a/404.html
+++ b/404.html
@@ -13,9 +13,8 @@
         <div class="xs-12 md-6 mx-auto">
             <div id="countUp">
                 <div class="number" data-count="404">0</div>
-                <div class="text">Page not found</div>
-                <div class="text">This may not mean anything.</div>
-                <div class="text">I'm probably working on something that has blown up.</div>
+                <div class="text">页面未找到</div>
+                <div class="text">你可能输入了不存在的页面!</div>
             </div>
         </div>
     </div>
