--- a/Lock.html
+++ b/Lock.html
@@ -6,6 +6,6 @@
     <title>Lock</title>
 </head>
 <body>
-§c[1] 测试1;[2] 测试2
+&b[1] &e添加更新功能，能获取更新的插件和更新信息;&b[2] &e修复了经济插件不存在时抛出异常的bug!
 </body>
 </html>
