--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Beckham Muff</a></h1>
+              <h1 class="mb-4"><a href="index.html" class="logo">LovesAsuna</a></h1>
               <ul>
                 <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>LovesAsuna</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -77,7 +77,7 @@
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <p><a href="#" class="scroll">Hello! I'm</a></p>
-                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Beckham Muff</h1>
+                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">LovesAsuna</h1>
               </div>
             </div>
           </div>
@@ -88,8 +88,8 @@
           <div class="container">
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <p><a href="#" class="scroll">I'm from Berlin</a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Web Designer</h1>
+                <p><a href="#" class="scroll">我来自中国</a></p>
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">一个Java程序员</h1>
               </div>
             </div>
           </div>
@@ -106,17 +106,16 @@
               <div class="about-desc">
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
-                  <h2 class="mb-5">Hi! I'm Beckham Muff</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
-                  <p><a href="#">Checkout my resume</a></p>
+                  <h2 class="mb-5">Hi! 我是LovesAsuna</h2>
+                  <p>作为一个Java程序员我热爱Minecraft,从事着Minecraft服务器插件的开发.</p>
+                  <p><a href="#">查看我的联系方式</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="#"><span class="icon-twitter"></span></a></li>
                     <li><a href="#"><span class="icon-facebook"></span></a></li>
                     <li><a href="#"><span class="icon-instagram"></span></a></li>
                   </ul>
-                  <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">beckham@email</a></p>
-                  <p>Phone: <a href="#">(123)-456-789</a></p>
+                  <h5>在这里联系我!</h5>
+                  <p>Email: <a href="#">625924077@qq.com</a></p>
                 </div>
               </div>
             </div>
@@ -128,8 +127,8 @@
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>What i do</span>
-              <h2>My services</h2>
+              <span>我做了什么</span>
+              <h2>我的服务</h2>
             </div>
           </div>
           <div class="row">
@@ -137,9 +136,9 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-layers"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">UI/UX Design</h3>
-                  <h3 class="heading">Mobile App Design</h3>
-                  <h3 class="heading">Responsive Design</h3>
+                  <h3 class="heading">Minecraft服务器插件开发</h3>
+                  <h3 class="heading">Andorid开发</h3>
+                  <h3 class="heading">响应式开发</h3>
                 </div>
               </div>      
             </div>
@@ -147,9 +146,9 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-gears"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">Product Strategy</h3>
-                  <h3 class="heading">Design Sprints</h3>
-                  <h3 class="heading">UX Strategy</h3>
+                  <h3 class="heading">产品策略</h3>
+                  <h3 class="heading">设计</h3>
+                  <h3 class="heading">用户体验策略</h3>
                 </div>
               </div>      
             </div>
@@ -158,8 +157,8 @@
                 <div class="icon mb-3"><span class="icon-code"></span></div>
                 <div class="media-body">
                   <h3 class="heading">HTML/CSS</h3>
-                  <h3 class="heading">Prototyping</h3>
-                  <h3 class="heading">User Testing</h3>
+                  <h3 class="heading">原模型制作</h3>
+                  <h3 class="heading">用户测试</h3>
                 </div>
               </div>    
             </div>
@@ -171,8 +170,8 @@
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>Portfolio</span>
-              <h2>Checkout a few of my works</h2>
+              <span>作品集</span>
+              <h2>观看一些我的成品</h2>
             </div>
           </div>
           <div class="row no-gutters">
@@ -183,7 +182,7 @@
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Illustration</h4>
+              <h4 class="subheading">插图</h4>
               <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
@@ -202,58 +201,6 @@
               <p><a href="#">View Project</a></p>
             </div>
           </div>
-          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-              <div class="icon d-flex text-center justify-content-center align-items-center">
-                <span class="icon-search"></span>
-              </div>
-            </a>
-            <div class="text">
-              <h4 class="subheading">Web Design</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
-            </div>
-          </div>
-          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-              <div class="icon d-flex text-center justify-content-center align-items-center">
-                <span class="icon-search"></span>
-              </div>
-            </a>
-            <div class="text order-1">
-              <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
-            </div>
-          </div>
-          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-              <div class="icon d-flex text-center justify-content-center align-items-center">
-                <span class="icon-search"></span>
-              </div>
-            </a>
-            <div class="text">
-              <h4 class="subheading">Animation</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
-            </div>
-          </div>
-          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-6.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-              <div class="icon d-flex text-center justify-content-center align-items-center">
-                <span class="icon-search"></span>
-              </div>
-            </a>
-            <div class="text order-1">
-              <h4 class="subheading">Branding</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-              <p><a href="#">View Project</a></p>
-            </div>
-          </div>
         </div>
         </div>
       </section>
@@ -262,16 +209,16 @@
         <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>Portfolio</span>
-              <h2>I love to share my achievements</h2>
+              <span>作品集</span>
+              <h2>我喜欢分享我的作品</h2>
             </div>
           </div>
           <div class="row d-flex justify-content-start">
             <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
               <div class="block-18">
                 <div class="text">
-                  <span class="ftco-label">Clients</span>
-                  <strong class="number" data-number="420">0</strong>
+                  <span class="ftco-label">客户</span>
+                  <strong class="number" data-number="10">0</strong>
                 </div>
               </div>
             </div>
@@ -280,8 +227,8 @@
             <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
               <div class="block-18">
                 <div class="text">
-                  <span class="ftco-label">Project done</span>
-                  <strong class="number" data-number="890">0</strong>
+                  <span class="ftco-label">完成项目</span>
+                  <strong class="number" data-number="6">0</strong>
                 </div>
               </div>
             </div>
@@ -290,8 +237,8 @@
             <div class="col-md-5 counter-wrap ftco-animate">
               <div class="block-18">
                 <div class="text">
-                  <span class="ftco-label">Cups of coffee</span>
-                  <strong class="number" data-number="1000">0</strong>
+                  <span class="ftco-label">好友数</span>
+                  <strong class="number" data-number="20">0</strong>
                 </div>
               </div>
             </div>
@@ -311,8 +258,8 @@
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <h2 class="mb-3">联系我</h2>
+                <p class="h3 email"><a href="#">625924077@qq.com</a></p>
               </div>
             </div>
           </div>
@@ -320,7 +267,7 @@
             <div class="col-md-12 text-center">
 
               <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by LovesAsuna
       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
           </div>
