--- a/about.html
+++ b/about.html
@@ -44,11 +44,11 @@
               <h1 class="mb-4"><a href="index.html" class="logo">Beckham Muff</a></h1>
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li class="active"><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
-                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
-                <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
+                <li class="active"><a href="about.html"><span><small>02</small>简历</span></a></li>
+                <li><a href="services.html"><span><small>03</small>服务</span></a></li>
+                <li><a href="portfolio.html"><span><small>04</small>作品集</span></a></li>
+                <li><a href="blog.html"><span><small>05</small>博客</span></a></li>
+                <li><a href="contact.html"><span><small>06</small>联系</span></a></li>
               </ul>
             </div>
           </div>
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(https://www.mcbbs.net/uc_server/avatar.php?uid=919583&size=small);"></span>LovesAsuna</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -79,17 +79,16 @@
               <div class="about-desc">
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
-                  <h2 class="mb-5">Hi! I'm Beckham Muff</h2>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
-                  <p><a href="#">Checkout my resume</a></p>
+                  <h2 class="mb-5">Hi! I'm LovesAsuna</h2>
+                  <p>作为一个Java程序员我热爱Minecraft,从事着Minecraft服务器插件的开发.</p>
+                  <p><a href="#">查看我的简历</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="#"><span class="icon-twitter"></span></a></li>
                     <li><a href="#"><span class="icon-facebook"></span></a></li>
                     <li><a href="#"><span class="icon-instagram"></span></a></li>
                   </ul>
-                  <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">beckham@email</a></p>
-                  <p>Phone: <a href="#">(123)-456-789</a></p>
+                  <h5>在这里联系我!</h5>
+                  <p>Email: <a href="#">625924077@qq.com</a></p>
                 </div>
               </div>
             </div>
@@ -102,7 +101,7 @@
 	          		<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 	          		<div class="row my-5">
 		          		<div class="col-md-6">
-		          			<p><strong>Name:</strong> <span>Beckham Muff</span></p>
+		          			<p><strong>Name:</strong> <span>LovesAsuna</span></p>
 		          			<p><strong>Address:</strong> <span>88 West 21th Street, Suite 721 New York NY 10016</span></p>
 		          			<p><strong>Phone:</strong> <span>(123)-456-789</span></p>
 		          		</div>
@@ -115,7 +114,7 @@
           		</div>
 
           		<div class="exp mt-5 ftco-animate">
-          			<h2 class="mb-4">Experience</h2>
+          			<h2 class="mb-4">经验</h2>
           			<div class="exp-wrap py-4">
           				<div class="desc">
 	          				<h4>UX &amp; Interaction Designer <span> - Google Company</span> </h4>
@@ -208,22 +207,33 @@
           	</div>
           	<div class="col-md-6 animate-box">
 								<div class="progress-wrap">
-									<h4>Photoshop</h4>
+									<h4>PS</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-									    <span>75%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="7"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:10%">
+									    <span>7%</span>
 									  	</div>
 									</div>
 								</div>
 							</div>
+			  <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+				  <div class="progress-wrap">
+					  <h4>C</h4>
+					  <div class="progress">
+						  <div class="progress-bar color-1" role="progressbar" aria-valuenow="30"
+							   aria-valuemin="0" aria-valuemax="100" style="width:30%">
+							  <span>30%</span>
+						  </div>
+					  </div>
+				  </div>
+			  </div>
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h4>jQuery</h4>
+									<h4>Java</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-									    <span>60%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="45"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:45%">
+									    <span>45%</span>
 									  	</div>
 									</div>
 								</div>
@@ -232,42 +242,9 @@
 								<div class="progress-wrap">
 									<h4>HTML5</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-									    <span>85%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-								<div class="progress-wrap">
-									<h4>CSS3</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-									    <span>90%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap">
-									<h4>WordPress</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-									    <span>70%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-								<div class="progress-wrap">
-									<h4>SEO</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-									    <span>80%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="1"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:15%">
+									    <span>1%</span>
 									  	</div>
 									</div>
 								</div>
@@ -288,8 +265,8 @@
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <h2 class="mb-3">联系我</h2>
+                <p class="h3 email"><a href="#">625924077@qq.com</a></p>
               </div>
             </div>
           </div>
@@ -297,7 +274,7 @@
             <div class="col-md-12 text-center">
 
               <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by LovesAsuna
       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
           </div>
