--- a/Lock.html
+++ b/Lock.html
@@ -6,6 +6,6 @@
     <title>Lock</title>
 </head>
 <body>
-&b[1] &e添加更新功能，能获取更新的插件和更新信息;&b[2] &e修改回抛出异常写法!
+&b[1] &e添加更新功能，能获取更新的插件和更新信息;&b[2] &e修改回抛出异常写法!;&b[3] &e修改了花里胡哨的加载信息
 </body>
 </html>
