--- a/Lock.html
+++ b/Lock.html
@@ -6,6 +6,6 @@
     <title>Lock</title>
 </head>
 <body>
-&b[1] &e添加更新功能，能获取更新的插件和更新信息 ;&b[2] &e修改了花里胡哨的加载信息 ;&b[3] &m真正能使用的收费功能!
+&b[1] &e添加更新功能，能获取更新的插件和更新信息 ;&b[2] &e修改了花里胡哨的加载信息 ;&b[3] &c&n真正能使用的收费功能!
 </body>
 </html>
