--- a/Lock.html
+++ b/Lock.html
@@ -6,6 +6,6 @@
     <title>Lock</title>
 </head>
 <body>
-&b[1] &e修复余额不足也进去的bug ;&b[2] &e添加门类型SIGN以支持1.12
+&b[1] &e略微修改检测牌子util的逻辑 ;&b[2] &e删除激活收费门的提示
 </body>
 </html>
