--- a/Lock.html
+++ b/Lock.html
@@ -6,6 +6,6 @@
     <title>Lock</title>
 </head>
 <body>
-&b[1] &e略微修改检测牌子util的逻辑 ;&b[2] &e删除激活收费门的提示
+&b[1] &e优化代码逻辑 ;&b[2] &e添加限制方向功能
 </body>
 </html>
