--- a/Lock.html
+++ b/Lock.html
@@ -6,6 +6,6 @@
     <title>Lock</title>
 </head>
 <body>
-&b[1] &e优化代码逻辑 ;&b[2] &e添加限制方向功能
+&b[1] &e添加禁止拥有者破坏收费门的功能 ;&b[2] &e修复扣钱/给钱不正确,owner未在线报错的问题
 </body>
 </html>
