--- a/Lock.html
+++ b/Lock.html
@@ -6,6 +6,6 @@
     <title>Lock</title>
 </head>
 <body>
-&b[1] &e添加禁止拥有者破坏收费门的功能 ;&b[2] &e修复扣钱/给钱不正确,owner未在线报错的问题
+&b[1] &c&l添加空钱效功能 ;
 </body>
 </html>
