--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <li><a href="#"><span class="icon-instagram"></span></a></li>
                   </ul>
                   <h5>在这里联系我!</h5>
-                  <p>Email: <a href="#">625924077@qq.com</a></p>
+                  <p>Email: <a href="#">qq625924077@gmail.com</a></p>
                 </div>
               </div>
             </div>
@@ -228,7 +228,7 @@
               <div class="block-18">
                 <div class="text">
                   <span class="ftco-label">完成项目</span>
-                  <strong class="number" data-number="6">0</strong>
+                  <strong class="number" data-number="9">0</strong>
                 </div>
               </div>
             </div>
@@ -238,7 +238,7 @@
               <div class="block-18">
                 <div class="text">
                   <span class="ftco-label">好友数</span>
-                  <strong class="number" data-number="20">0</strong>
+                  <strong class="number" data-number="109">0</strong>
                 </div>
               </div>
             </div>
@@ -259,7 +259,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">联系我</h2>
-                <p class="h3 email"><a href="#">625924077@qq.com</a></p>
+                <p class="h3 email"><a href="#">qq625924077@gmail.com</a></p>
               </div>
             </div>
           </div>
